--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container d-flex align-items-center h-100">
       <div class="row">
     <header class="text-center col-12">
-      <h1 class="text-uppercase"><strong>ravs industries private limited</strong>
+      <h1 class="text-uppercase"><strong>the biggest startup event of the year</strong>
       </h1>
       </header>
       <div class="buffer col-12"></div>
