--- a/index.html
+++ b/index.html
@@ -2,17 +2,12 @@
 <html>
   <head>
     <title>Startup</title>
-    <!-- Required meta tags -->
+    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-
-    <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
-    <!-- Your own stylesheet -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
@@ -25,7 +20,8 @@
       <div class="buffer col-12"></div>
       <section class="text-center col-12">
     <hr>
-    <a href="https://mailchi.mp/b6c4080cc4c3/ravs"><button class="btn btn-primary btn-xl">FInd out more</button>
+    <a href="https://mailchi.mp/8ef27c2e6c81/startup">
+    	<button class="btn btn-primary btn-xl">FInd out more</button>
       </a>
     </section>
      </div>
